--- a/index.html
+++ b/index.html
@@ -3,10 +3,54 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mrs. Higgins' Classroom</title>
-    <script type="module" src="/src/main.jsx"></script>
+    <title>Educational Web App</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div id="root"></div>
+    <header>
+        <h1>Mt Vernon Middle School Educational Resources</h1>
+        <p>Welcome, Mrs. Erin Higgins</p>
+    </header>
+
+    <main>
+        <section class="card-container">
+            <div class="card">
+                <img src="math.jpg" alt="Math" class="card-image">
+                <div class="card-content">
+                    <h2>Math Resources</h2>
+                    <p>Explore a variety of math resources for your students.</p>
+                    <button>View Resources</button>
+                </div>
+            </div>
+            <div class="card">
+                <img src="science.jpg" alt="Science" class="card-image">
+                <div class="card-content">
+                    <h2>Science Resources</h2>
+                    <p>Interactive lessons and videos to enhance science learning.</p>
+                    <button>View Resources</button>
+                </div>
+            </div>
+            <div class="card">
+                <img src="history.jpg" alt="History" class="card-image">
+                <div class="card-content">
+                    <h2>History Resources</h2>
+                    <p>Dive deep into American History with interactive content.</p>
+                    <button>View Resources</button>
+                </div>
+            </div>
+            <div class="card">
+                <img src="english.jpg" alt="English" class="card-image">
+                <div class="card-content">
+                    <h2>English Resources</h2>
+                    <p>Enhance reading and writing skills with engaging lessons.</p>
+                    <button>View Resources</button>
+                </div>
+            </div>
+        </section>
+    </main>
+
+    <footer>
+        <p>Mt Vernon Middle School - Fortville, Indiana</p>
+    </footer>
 </body>
 </html>
