--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Educational Web App</title>
+    <title>Mt Vernon Middle School Educational Resources</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -14,34 +14,41 @@
 
     <main>
         <section class="card-container">
+            <!-- Math Card -->
             <div class="card">
                 <img src="math.jpg" alt="Math" class="card-image">
                 <div class="card-content">
-                    <h2>Math Resources</h2>
+                    <h2>Math</h2>
                     <p>Explore a variety of math resources for your students.</p>
                     <button>View Resources</button>
                 </div>
             </div>
+
+            <!-- Science Card -->
             <div class="card">
                 <img src="science.jpg" alt="Science" class="card-image">
                 <div class="card-content">
-                    <h2>Science Resources</h2>
+                    <h2>Science</h2>
                     <p>Interactive lessons and videos to enhance science learning.</p>
                     <button>View Resources</button>
                 </div>
             </div>
+
+            <!-- History Card -->
             <div class="card">
                 <img src="history.jpg" alt="History" class="card-image">
                 <div class="card-content">
-                    <h2>History Resources</h2>
+                    <h2>History</h2>
                     <p>Dive deep into American History with interactive content.</p>
                     <button>View Resources</button>
                 </div>
             </div>
+
+            <!-- English Card -->
             <div class="card">
                 <img src="english.jpg" alt="English" class="card-image">
                 <div class="card-content">
-                    <h2>English Resources</h2>
+                    <h2>English</h2>
                     <p>Enhance reading and writing skills with engaging lessons.</p>
                     <button>View Resources</button>
                 </div>
@@ -54,3 +61,4 @@
     </footer>
 </body>
 </html>
+
