--- a/index.html
+++ b/index.html
@@ -1,64 +1,84 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mt Vernon Middle School Educational Resources</title>
-    <link rel="stylesheet" href="styles.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Neely Board</title>
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <header>
-        <h1>Mt Vernon Middle School Educational Resources</h1>
-        <p>Welcome, Mrs. Erin Higgins</p>
-    </header>
 
-    <main>
-        <section class="card-container">
-            <!-- Math Card -->
-            <div class="card">
-                <img src="math.jpg" alt="Math" class="card-image">
-                <div class="card-content">
-                    <h2>Math</h2>
-                    <p>Explore a variety of math resources for your students.</p>
-                    <button>View Resources</button>
-                </div>
+  <header class="masthead">
+    <h1 class="site-title centeredText">Neely Board</h1>
+  </header>
+
+  <main class="main-area">
+    <div class="centered">
+      <section class="cards">
+        <!-- Card 1: Fractions -->
+        <article class="card" status="important">
+          <a href="#">
+            <div class="pixHolder">
+              <img src="images/fractions.jpg" alt="fractions" />
             </div>
-
-            <!-- Science Card -->
-            <div class="card">
-                <img src="science.jpg" alt="Science" class="card-image">
-                <div class="card-content">
-                    <h2>Science</h2>
-                    <p>Interactive lessons and videos to enhance science learning.</p>
-                    <button>View Resources</button>
-                </div>
+            <div class="card-content">
+              <h3>Math - Fractions</h3>
+              <ul>
+                <li>half, quarter?</li>
+              </ul>
             </div>
+          </a>
+        </article>
 
-            <!-- History Card -->
-            <div class="card">
-                <img src="history.jpg" alt="History" class="card-image">
-                <div class="card-content">
-                    <h2>History</h2>
-                    <p>Dive deep into American History with interactive content.</p>
-                    <button>View Resources</button>
-                </div>
+        <!-- Card 2: Geography -->
+        <article class="card" status="done">
+          <a href="#">
+            <div class="pixHolder">
+              <img src="images/geography.jpg" alt="geography" />
             </div>
-
-            <!-- English Card -->
-            <div class="card">
-                <img src="english.jpg" alt="English" class="card-image">
-                <div class="card-content">
-                    <h2>English</h2>
-                    <p>Enhance reading and writing skills with engaging lessons.</p>
-                    <button>View Resources</button>
-                </div>
+            <div class="card-content">
+              <h3>Geography - Continents</h3>
+              <ul>
+                <li>Africa, Europe</li>
+              </ul>
             </div>
-        </section>
-    </main>
+          </a>
+        </article>
 
-    <footer>
-        <p>Mt Vernon Middle School - Fortville, Indiana</p>
-    </footer>
+        <!-- Card 3: History -->
+        <article class="card">
+          <a href="#">
+            <div class="pixHolder">
+              <img src="images/history.jpg" alt="history" />
+            </div>
+            <div class="card-content">
+              <h3>History - Ancient Civilizations</h3>
+              <ul>
+                <li>Egypt, Greece</li>
+              </ul>
+            </div>
+          </a>
+        </article>
+
+        <!-- Card 4: Science -->
+        <article class="card">
+          <a href="#">
+            <div class="pixHolder">
+              <img src="images/science.jpg" alt="science" />
+            </div>
+            <div class="card-content">
+              <h3>Science - The Solar System</h3>
+              <ul>
+                <li>Planets, Stars</li>
+              </ul>
+            </div>
+          </a>
+        </article>
+      </section>
+    </div>
+  </main>
+
 </body>
 </html>
+
 
