--- a/index.html
+++ b/index.html
@@ -3,73 +3,96 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Neely Board</title>
+  <title>Mt Vernon Middle School - Classroom Board</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
 
+  <!-- Header Section -->
   <header class="masthead">
-    <h1 class="site-title centeredText">Neely Board</h1>
+    <h1 class="site-title centeredText">Mt Vernon Middle School</h1>
+    <h2 class="subheading centeredText">Classroom Resources & Learning Board</h2>
   </header>
 
+  <!-- Main Content Area -->
   <main class="main-area">
     <div class="centered">
       <section class="cards">
-        <!-- Card 1: Fractions -->
+        <!-- Card 1: Math -->
         <article class="card" status="important">
           <a href="#">
             <div class="pixHolder">
-              <img src="images/fractions.jpg" alt="fractions" />
+              <img src="images/math.jpg" alt="Math Resources" />
             </div>
             <div class="card-content">
-              <h3>Math - Fractions</h3>
+              <h3>Math - Fractions & Decimals</h3>
               <ul>
-                <li>half, quarter?</li>
+                <li>Learn fractions and their conversions.</li>
+                <li>Understand decimal places and operations.</li>
               </ul>
             </div>
           </a>
         </article>
 
-        <!-- Card 2: Geography -->
+        <!-- Card 2: English -->
         <article class="card" status="done">
           <a href="#">
             <div class="pixHolder">
-              <img src="images/geography.jpg" alt="geography" />
+              <img src="images/english.jpg" alt="English Resources" />
             </div>
             <div class="card-content">
-              <h3>Geography - Continents</h3>
+              <h3>English - Writing Skills</h3>
               <ul>
-                <li>Africa, Europe</li>
+                <li>Improve sentence structure.</li>
+                <li>Learn creative writing techniques.</li>
               </ul>
             </div>
           </a>
         </article>
 
-        <!-- Card 3: History -->
+        <!-- Card 3: Science -->
         <article class="card">
           <a href="#">
             <div class="pixHolder">
-              <img src="images/history.jpg" alt="history" />
-            </div>
-            <div class="card-content">
-              <h3>History - Ancient Civilizations</h3>
-              <ul>
-                <li>Egypt, Greece</li>
-              </ul>
-            </div>
-          </a>
-        </article>
-
-        <!-- Card 4: Science -->
-        <article class="card">
-          <a href="#">
-            <div class="pixHolder">
-              <img src="images/science.jpg" alt="science" />
+              <img src="images/science.jpg" alt="Science Resources" />
             </div>
             <div class="card-content">
               <h3>Science - The Solar System</h3>
               <ul>
-                <li>Planets, Stars</li>
+                <li>Explore planets, stars, and galaxies.</li>
+                <li>Learn about space exploration.</li>
+              </ul>
+            </div>
+          </a>
+        </article>
+
+        <!-- Card 4: History -->
+        <article class="card">
+          <a href="#">
+            <div class="pixHolder">
+              <img src="images/history.jpg" alt="History Resources" />
+            </div>
+            <div class="card-content">
+              <h3>History - Ancient Civilizations</h3>
+              <ul>
+                <li>Study Egypt, Greece, and Rome.</li>
+                <li>Understand the rise of empires.</li>
+              </ul>
+            </div>
+          </a>
+        </article>
+
+        <!-- Card 5: Geography -->
+        <article class="card">
+          <a href="#">
+            <div class="pixHolder">
+              <img src="images/geography.jpg" alt="Geography Resources" />
+            </div>
+            <div class="card-content">
+              <h3>Geography - Countries & Continents</h3>
+              <ul>
+                <li>Learn about different countries and their cultures.</li>
+                <li>Explore geographical landmarks.</li>
               </ul>
             </div>
           </a>
@@ -80,5 +103,6 @@
 
 </body>
 </html>
+
 
 
