--- a/index.html
+++ b/index.html
@@ -18,91 +18,93 @@
   <main class="main-area">
     <div class="centered">
       <section class="cards">
-        <!-- Card 1: Math -->
-        <article class="card" status="important">
-          <a href="#">
-            <div class="pixHolder">
+        <!-- Flip Card for Math -->
+        <div class="flip-card">
+          <div class="flip-card-inner">
+            <div class="flip-card-front">
               <img src="images/math.jpg" alt="Math Resources" />
-            </div>
-            <div class="card-content">
               <h3>Math - Fractions & Decimals</h3>
+            </div>
+            <div class="flip-card-back">
               <ul>
                 <li>Learn fractions and their conversions.</li>
                 <li>Understand decimal places and operations.</li>
               </ul>
             </div>
-          </a>
-        </article>
+          </div>
+        </div>
 
-        <!-- Card 2: English -->
-        <article class="card" status="done">
-          <a href="#">
-            <div class="pixHolder">
+        <!-- Flip Card for English -->
+        <div class="flip-card">
+          <div class="flip-card-inner">
+            <div class="flip-card-front">
               <img src="images/english.jpg" alt="English Resources" />
-            </div>
-            <div class="card-content">
               <h3>English - Writing Skills</h3>
+            </div>
+            <div class="flip-card-back">
               <ul>
                 <li>Improve sentence structure.</li>
                 <li>Learn creative writing techniques.</li>
               </ul>
             </div>
-          </a>
-        </article>
+          </div>
+        </div>
 
-        <!-- Card 3: Science -->
-        <article class="card">
-          <a href="#">
-            <div class="pixHolder">
+        <!-- Flip Card for Science -->
+        <div class="flip-card">
+          <div class="flip-card-inner">
+            <div class="flip-card-front">
               <img src="images/science.jpg" alt="Science Resources" />
-            </div>
-            <div class="card-content">
               <h3>Science - The Solar System</h3>
+            </div>
+            <div class="flip-card-back">
               <ul>
                 <li>Explore planets, stars, and galaxies.</li>
                 <li>Learn about space exploration.</li>
               </ul>
             </div>
-          </a>
-        </article>
+          </div>
+        </div>
 
-        <!-- Card 4: History -->
-        <article class="card">
-          <a href="#">
-            <div class="pixHolder">
+        <!-- Flip Card for History -->
+        <div class="flip-card">
+          <div class="flip-card-inner">
+            <div class="flip-card-front">
               <img src="images/history.jpg" alt="History Resources" />
-            </div>
-            <div class="card-content">
               <h3>History - Ancient Civilizations</h3>
+            </div>
+            <div class="flip-card-back">
               <ul>
                 <li>Study Egypt, Greece, and Rome.</li>
                 <li>Understand the rise of empires.</li>
               </ul>
             </div>
-          </a>
-        </article>
+          </div>
+        </div>
 
-        <!-- Card 5: Geography -->
-        <article class="card">
-          <a href="#">
-            <div class="pixHolder">
+        <!-- Flip Card for Geography -->
+        <div class="flip-card">
+          <div class="flip-card-inner">
+            <div class="flip-card-front">
               <img src="images/geography.jpg" alt="Geography Resources" />
-            </div>
-            <div class="card-content">
               <h3>Geography - Countries & Continents</h3>
+            </div>
+            <div class="flip-card-back">
               <ul>
                 <li>Learn about different countries and their cultures.</li>
                 <li>Explore geographical landmarks.</li>
               </ul>
             </div>
-          </a>
-        </article>
+          </div>
+        </div>
+
       </section>
     </div>
   </main>
 
 </body>
 </html>
+
 
 
 
