--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <div class="flip-card">
           <div class="flip-card-inner">
             <div class="flip-card-front">
-              <img src="images/math.jpg" alt="Math Resources" />
+              <img src="https://static.vecteezy.com/system/resources/previews/013/115/384/non_2x/cartoon-maths-elements-background-education-logo-vector.jpg" alt="Math Resources" />
               <h3>Math - Fractions & Decimals</h3>
             </div>
             <div class="flip-card-back">
