--- a/index.html
+++ b/index.html
@@ -3,107 +3,86 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Mt Vernon Middle School - Classroom Board</title>
+  <title>Flip Cards - Subjects</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+  <div class="masthead">
+    <h1 class="site-title">Interactive Flip Cards</h1>
+    <p class="subheading">Explore the world of learning through flip cards!</p>
+  </div>
 
-  <!-- Header Section -->
-  <header class="masthead">
-    <h1 class="site-title centeredText">Mt Vernon Middle School</h1>
-    <h2 class="subheading centeredText">Classroom Resources & Learning Board</h2>
-  </header>
-
-  <!-- Main Content Area -->
-  <main class="main-area">
-    <div class="centered">
-      <section class="cards">
-        <!-- Flip Card for Math -->
-        <div class="flip-card">
-          <div class="flip-card-inner">
-            <div class="flip-card-front">
-              <img src="https://static.vecteezy.com/system/resources/previews/013/115/384/non_2x/cartoon-maths-elements-background-education-logo-vector.jpg" alt="Math Resources" />
-              <h3>Math - Fractions & Decimals</h3>
-            </div>
-            <div class="flip-card-back">
-              <ul>
-                <li>Learn fractions and their conversions.</li>
-                <li>Understand decimal places and operations.</li>
-              </ul>
-            </div>
+  <div class="main-area centered">
+    <div class="cards">
+      <!-- Flip Card for Math -->
+      <div class="flip-card" data-card="math">
+        <div class="flip-card-inner">
+          <div class="flip-card-front">
+            <img src="https://static.vecteezy.com/system/resources/previews/013/115/384/non_2x/cartoon-maths-elements-background-education-logo-vector.jpg" alt="Math Resources" />
+            <h3>Math - Fractions & Decimals</h3>
+          </div>
+          <div class="flip-card-back">
+            <ul>
+              <li>Learn fractions and their conversions.</li>
+              <li>Understand decimal places and operations.</li>
+            </ul>
           </div>
         </div>
+      </div>
 
-        <!-- Flip Card for English -->
-        <div class="flip-card">
-          <div class="flip-card-inner">
-            <div class="flip-card-front">
-              <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcR8fLNaVBeHZ7IKpcfKYGu76WxSVP_F-8DkDg&s" alt="English Resources" />
-              <h3>English - Writing Skills</h3>
-            </div>
-            <div class="flip-card-back">
-              <ul>
-                <li>Improve sentence structure.</li>
-                <li>Learn creative writing techniques.</li>
-              </ul>
-            </div>
+      <!-- Flip Card for Science -->
+      <div class="flip-card" data-card="science">
+        <div class="flip-card-inner">
+          <div class="flip-card-front">
+            <img src="https://static.vecteezy.com/system/resources/thumbnails/000/299/163/small/pch4_k5pc_180308.jpg" alt="Science Resources" />
+            <h3>Science - The Solar System</h3>
+          </div>
+          <div class="flip-card-back">
+            <ul>
+              <li>Explore planets, stars, and galaxies.</li>
+              <li>Learn about space exploration.</li>
+            </ul>
           </div>
         </div>
+      </div>
 
-        <!-- Flip Card for Science -->
-        <div class="flip-card">
-          <div class="flip-card-inner">
-            <div class="flip-card-front">
-              <img src="https://static.vecteezy.com/system/resources/thumbnails/000/299/163/small/pch4_k5pc_180308.jpg" alt="Science Resources" />
-              <h3>Science - The Solar System</h3>
-            </div>
-            <div class="flip-card-back">
-              <ul>
-                <li>Explore planets, stars, and galaxies.</li>
-                <li>Learn about space exploration.</li>
-              </ul>
-            </div>
+      <!-- Flip Card for Geography -->
+      <div class="flip-card" data-card="geography">
+        <div class="flip-card-inner">
+          <div class="flip-card-front">
+            <img src="https://as1.ftcdn.net/jpg/03/66/77/52/1000_F_366775227_6n6WV6muI5TaYWOrzc5eJJP6IKUYuZGr.jpg" alt="Geography Resources" />
+            <h3>Geography - Countries & Continents</h3>
+          </div>
+          <div class="flip-card-back">
+            <ul>
+              <li>Learn about different countries and their cultures.</li>
+              <li>Explore geographical landmarks.</li>
+            </ul>
           </div>
         </div>
+      </div>
 
-        <!-- Flip Card for History -->
-        <div class="flip-card">
-          <div class="flip-card-inner">
-            <div class="flip-card-front">
-              <img src="https://media.istockphoto.com/id/1092170968/vector/open-book-with-history-doodles-and-lettering.jpg?s=612x612&w=0&k=20&c=SvXn0O25eHC8ARjwlcn83kahxjMGl2ti_DDFGozBKqg=" alt="History Resources" />
-              <h3>History - Ancient Civilizations</h3>
-            </div>
-            <div class="flip-card-back">
-              <ul>
-                <li>Study Egypt, Greece, and Rome.</li>
-                <li>Understand the rise of empires.</li>
-              </ul>
-            </div>
+      <!-- Flip Card for History -->
+      <div class="flip-card" data-card="history">
+        <div class="flip-card-inner">
+          <div class="flip-card-front">
+            <img src="https://media.istockphoto.com/id/1092170968/vector/open-book-with-history-doodles-and-lettering.jpg?s=612x612&w=0&k=20&c=SvXn0O25eHC8ARjwlcn83kahxjMGl2ti_DDFGozBKqg=" alt="History Resources" />
+            <h3>History - Ancient Civilizations</h3>
+          </div>
+          <div class="flip-card-back">
+            <ul>
+              <li>Study Egypt, Greece, and Rome.</li>
+              <li>Understand the rise of empires.</li>
+            </ul>
           </div>
         </div>
-
-        <!-- Flip Card for Geography -->
-        <div class="flip-card">
-          <div class="flip-card-inner">
-            <div class="flip-card-front">
-              <img src="https://as1.ftcdn.net/jpg/03/66/77/52/1000_F_366775227_6n6WV6muI5TaYWOrzc5eJJP6IKUYuZGr.jpg" alt="Geography Resources" />
-              <h3>Geography - Countries & Continents</h3>
-            </div>
-            <div class="flip-card-back">
-              <ul>
-                <li>Learn about different countries and their cultures.</li>
-                <li>Explore geographical landmarks.</li>
-              </ul>
-            </div>
-          </div>
-        </div>
-
-      </section>
+      </div>
     </div>
-  </main>
+  </div>
 
 </body>
 </html>
+
 
 
 
