--- a/index.html
+++ b/index.html
@@ -5,10 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Neely Board</title>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
-    <style>
-        /* CSS goes here */
-    </style>
+    <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
@@ -19,11 +16,10 @@
     <main class="main-area">
         <div class="centered">
             <section class="cards">
-                <!-- Card 1 -->
-                <article class="card">
+                <article class="card" status="important">
                     <a href="#">
                         <div class="pixHolder">
-                            <img src="images/fractions.jpg" alt="fractions" />
+                            <img src="images/fractions.jpg" alt="fractions">
                         </div>
                         <div class="card-content">
                             <h3>Math - Fractions</h3>
@@ -34,46 +30,29 @@
                     </a>
                 </article>
 
-                <!-- Card 2 -->
-                <article class="card" status="important">
+                <article class="card" status="done">
                     <a href="#">
                         <div class="pixHolder">
-                            <img src="images/geometry.jpg" alt="geometry" />
+                            <img src="images/geometry.jpg" alt="geometry">
                         </div>
                         <div class="card-content">
                             <h3>Math - Geometry</h3>
                             <ul>
-                                <li>Circle, Square?</li>
+                                <li>area, perimeter?</li>
                             </ul>
                         </div>
                     </a>
                 </article>
 
-                <!-- Card 3 (Completed) -->
-                <article class="card" status="done">
-                    <a href="#">
-                        <div class="pixHolder">
-                            <img src="images/history.jpg" alt="history" />
-                        </div>
-                        <div class="card-content">
-                            <h3>History - Ancient Egypt</h3>
-                            <ul>
-                                <li>Pyramids, Pharaohs</li>
-                            </ul>
-                        </div>
-                    </a>
-                </article>
-
-                <!-- More Cards -->
                 <article class="card">
                     <a href="#">
                         <div class="pixHolder">
-                            <img src="images/science.jpg" alt="science" />
+                            <img src="images/algebra.jpg" alt="algebra">
                         </div>
                         <div class="card-content">
-                            <h3>Science - Physics</h3>
+                            <h3>Math - Algebra</h3>
                             <ul>
-                                <li>Newton's Laws</li>
+                                <li>equations, variables?</li>
                             </ul>
                         </div>
                     </a>
@@ -84,6 +63,7 @@
 </body>
 
 </html>
+
 
 
 
