--- a/index.html
+++ b/index.html
@@ -1,68 +1,70 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Neely Board</title>
-    <link rel="stylesheet" href="style.css">
+    <title>Neely Board - Week 4 Flexbox Lab</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
-
 <body>
     <header class="masthead">
-        <h1 class="site-title centeredText">Neely Board</h1>
+        <h1 class="site-title centeredText">Neely Board - Week 4 Flexbox Lab</h1>
     </header>
 
     <main class="main-area">
-        <div class="centered">
-            <section class="cards">
-                <article class="card" status="important">
-                    <a href="#">
-                        <div class="pixHolder">
-                            <img src="images/fractions.jpg" alt="fractions">
+        <section class="cards">
+            <!-- Card 1: Stage 1 - Flexbox Lesson Cards -->
+            <article class="card">
+                <div class="flip-card">
+                    <div class="flip-card-inner">
+                        <div class="flip-card-front">
+                            <h3>Stage 1: Flexbox Lesson Cards</h3>
                         </div>
-                        <div class="card-content">
-                            <h3>Math - Fractions</h3>
-                            <ul>
-                                <li>half, quarter?</li>
-                            </ul>
+                        <div class="flip-card-back">
+                            <p>Explore the fundamentals of Flexbox with these lesson cards.</p>
                         </div>
-                    </a>
-                </article>
+                    </div>
+                </div>
+            </article>
 
-                <article class="card" status="done">
-                    <a href="#">
-                        <div class="pixHolder">
-                            <img src="images/geometry.jpg" alt="geometry">
+            <!-- Card 2: Media Queries -->
+            <article class="card">
+                <div class="flip-card">
+                    <div class="flip-card-inner">
+                        <div class="flip-card-front">
+                            <h3>Media Queries</h3>
                         </div>
-                        <div class="card-content">
-                            <h3>Math - Geometry</h3>
-                            <ul>
-                                <li>area, perimeter?</li>
-                            </ul>
+                        <div class="flip-card-back">
+                            <p>Learn how to use media queries for responsive designs.</p>
                         </div>
-                    </a>
-                </article>
+                    </div>
+                </div>
+            </article>
 
-                <article class="card">
-                    <a href="#">
-                        <div class="pixHolder">
-                            <img src="images/algebra.jpg" alt="algebra">
+            <!-- Card 3: Neely Board Lab Submission -->
+            <article class="card">
+                <div class="flip-card">
+                    <div class="flip-card-inner">
+                        <div class="flip-card-front">
+                            <h3>Neely Board Lab Submission</h3>
                         </div>
-                        <div class="card-content">
-                            <h3>Math - Algebra</h3>
-                            <ul>
-                                <li>equations, variables?</li>
-                            </ul>
+                        <div class="flip-card-back">
+                            <p>Submit your work for evaluation. Don't forget to include images!</p>
                         </div>
-                    </a>
-                </article>
-            </section>
-        </div>
+                    </div>
+                </div>
+            </article>
+
+            <!-- Additional Cards Here -->
+        </section>
     </main>
-</body>
 
+    <footer>
+        <p>Created for Mrs. Erin Higgins, Mt Vernon Middle School, Fortville, Indiana</p>
+    </footer>
+</body>
 </html>
+
 
 
 
