--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Neely Board - Week 4 Flexbox Lab</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header class="masthead">
@@ -64,6 +64,7 @@
     </footer>
 </body>
 </html>
+
 
 
 
